Version 0.9.34dev (?? ??? ??)
  - Updated Swedish translation.
  - Updated French translation.
Version 0.9.33 (02 Aug 01)
  - Fixed bug: the "back to my calendar" link would go to another user's
    calendar if you just viewed another user's calendar.
  - Fixed bug: was not displaying more than one event per day in the
    week view.
  - Removed all the <?php_track_vars?> from every .php file since it was
    causing problems for a lot of people.
  - Fixed bug: User who logged in to the 0.9.31 version would have a
    session cookie that would generate a "Error getting user" message.
    Now redirects them back to the login page.
  - Fixed bug: don't display access, priority and participants in email
    reminders if they've been disabled in config.inc
  - Added missing user-ldap.inc to the distribution.
  - Updated Swedish translation
Version 0.9.32 (26 July 01)
  - Fixed some of the login/session code.  After examining the code, I'm
    surprised it worked at all! :-)  And, it suddenly stopped working on
    my system (would not allow any logins), so it could very will have
    been the bug that prevented people from being able to login.
  - Fixed bug: Was not allowing admin users to add events to a read-only
    setup.
  - Attempted to not reference undefined variables to avoid the warnings
    generated by PHP when the warning level is set to complain about
    referencing undefined variables.
  - Fixed bug: Was not allowing selection of a user when adding/editing
    layers.
  - Fixed bug: If you set a reminder to be sent at the exact time
    of the event (0 days, hours, minutes before event), then when
    you come back to edit the event, it shows the default time before
    rather than 0.
  - Fixed bug: printer friendly version of week view was displaying
    events as links.
  - Fixed use of php_track_vars.  Was using <?php php_track_vars?>.
    Proper use is just <?php_track_vars?>.
  - Fixed bug 441688: MySQL does case-insensitive searches, which allows